# miniQM

./: .gitignore  README.md  core.py  hf.py  miniQM.py  pyproject.toml  timeprop.py  tutorial.ipynb
src/miniQM/: __init__.py  core.py  hf.py  timeprop.py
